# Michigan-Path-Tracer

./: .gitignore  CMakeLists.txt  README.md  style_guides.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
docs/: style_guides.md
ext/: CMakeLists.txt
include/: main.hpp  math.hpp  texture.hpp
include/Scene/: Camera.hpp  Light.hpp  Object.hpp  Primitive.hpp  Scene.hpp  Surface.hpp
src/: CMakeLists.txt  main.cpp  texture.cpp
src/Scene/: CMakeLists.txt  Camera.cpp  Light.cpp  Primitive.cpp  Surface.cpp
